[package]
name = "cake-for-mew"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
bevy_asset_loader = { version = "0.24.0-rc.1", features = ["2d"] }
bevy_light_2d = "0.8.0"
bevy_rand = { version = "0.12.1", features = ["wyrand"] }
rand_core = "0.9.3"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[lints.clippy]
too_many_arguments = "allow"

